Renamed parts backend + frontend, basic UI

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
             "name": "WorkoutApiApplication",
             "request": "launch",
             "mainClass": "com.example.workout_api.WorkoutApiApplication",
+            "projectName": "workout-api"
+        },
+        {
+            "type": "java",
+            "name": "WorkoutApiApplication",
+            "request": "launch",
+            "mainClass": "com.example.workout_api.WorkoutApiApplication",
             "projectName": "workoutapi"
         },
         {
