GraphQL implementation for registration, login, workout creation

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=workout-api
 
-spring.data.mongodb.uri=${DB_URI}
+# spring.data.mongodb.uri=${DB_URI}
+spring.data.mongodb.uri=mongodb+srv://rnwong32:RyanWong@workout-tracker.5zmjvxr.mongodb.net/test?retryWrites=true&w=majority&appName=Workout-Tracker
