--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -51,6 +51,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-starter-graphql</artifactId>
+		</dependency>
+		<dependency>
     		<groupId>org.projectlombok</groupId>
     		<artifactId>lombok</artifactId>
     		<version>1.18.30</version> 
@@ -75,6 +79,11 @@
         	<groupId>com.fasterxml.jackson.core</groupId>
         	<artifactId>jackson-databind</artifactId>
     	</dependency>
+		<dependency>
+  			<groupId>com.graphql-java</groupId>
+  			<artifactId>graphql-java-extended-scalars</artifactId>
+  			<version>18.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
