--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.application.name=workout-api
 
-# spring.data.mongodb.uri=${DB_URI}
-spring.data.mongodb.uri=mongodb+srv://rnwong32:RyanWong@workout-tracker.5zmjvxr.mongodb.net/test?retryWrites=true&w=majority&appName=Workout-Tracker
+spring.data.mongodb.uri=${DB_URI}
